# TailorMe

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
data/: .gitignore  bo_back_head.sel  bo_hands.sel  bo_head.sel  bo_head_hands_toes.sel  bo_toes.sel  caesar_fits  head_inverse.sel  head_mirror_weights.mat  mapping_full_to_cut.sel  mean_male_skel.off  mean_male_skin.off  mouth.sel  template_female_skel.off  template_male_skel.off  wrap_shrinking.vw
src/: CMakeLists.txt  Constants.h  GlobTypes.h  Globals.cpp  Globals.h  TailorMeViewer.cpp  TailorMeViewer.h
src/algorithms/: CMakeLists.txt  LayerCollisionResolve.cpp  LayerCollisionResolve.h  MeshIntersection.cpp  MeshIntersection.h  MeshMeasurements.h  MeshStitching.cpp  MeshStitching.h  RBF_warp.cpp  RBF_warp.h  TriTriIntersect.cpp  TriTriIntersect.h
src/mesh_massage/: CMakeLists.txt  post_proc_face_mirror.cpp  post_proc_face_mirror.h  post_proc_smoothing.cpp  post_proc_smoothing.h  post_processing_base.cpp  post_processing_base.h
src/meshes/: BaseMesh.cpp  BaseMesh.h  BodyMesh.cpp  BodyMesh.h  CMakeLists.txt  TargetSkinMesh.cpp  TargetSkinMesh.h
src/models/: BaseModel.cpp  BaseModel.h  CMakeLists.txt  SpiralNetAEModel.cpp  SpiralNetAEModel.h
src/utils/: CMakeLists.txt  name_utils.cpp  name_utils.h
src/utils/io/: CMakeLists.txt  filesystem_utils.cpp  filesystem_utils.h  io_selection.h  io_vertexweighting.cpp  io_vertexweighting.h  ndarray_io.cpp  ndarray_io.h  pmp_io.cpp  pmp_io.h
